[package]
name = "monitor_sleep_toggle"
version = "1.0.1"
edition = "2024"
description = "Small tool to toggle between fast monitor sleep (1 Minute) and no monitor sleep."
license-file = "LICENSE"
repository = "https://github.com/hardliner66/monitor_sleep_toggle"

[dependencies]
anyhow = "1.0.97"
image = "0.25.5"
tao = "0.32.8"
tray-icon = "0.20.0"
